# ShallowWaterEquations

./: CMakeLists.txt  README.md
debug/: CMakeCache.txt  GPU_Project  Makefile  cmake_install.cmake
depends/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
shaders/: fshader.fs  fshader2.fs  vshader.vs  vshader1.vs  vshader2.vs
src/: SWE.cu  SWE.cuh  cuda_helper_functions.cuh  defines.h  helper_functions.h  main.cu  utils.cpp  utils.h
